--- a/style.css
+++ b/style.css
@@ -1,91 +1,70 @@
-h1 {
-    text-align: center;
-	 }
-
-#t {
-    margin: 30px;
-    color:#7131FC;
-    }
-
-#imagem1 {
-  	       margin-left: 200px;
-  	        margin-right: 200px;
-          }
-
-table.bordasimples { border-collapse: collapse;}
-table.bordasimples tr td { border:1px solid #FF0000;}
-
-.center {
-          margin-left: auto;
-          margin-right: auto;
-	         width:700px;
-         }
-
-#dois   {
-          text-align: center;
-}
-/*a{
-  width: 500px;
-  text-align: justify;
-}
- b{
-    position: relative;
-    width: 100%;
-    height: 30px;
-    background-color: grey;
-}
- c{
-    position: absolute;
-    width: 1%;
-    height: 100%;
-    background-color: green;
+#Titulo {
+  width: 100%;
 }
 
- d{
-    text-align: center;
-    line-height: 30px;
-    color: white;
-}
-.button {
-  border-radius: 4px;
-  background-color: #f4511e;
-  border: none;
-  color: #FFFFFF;
+#Titulo {
+  height: 150px;
+  background-color: #836FFF;
+  font-size: 80pt;
   text-align: center;
-  font-size: 28px;
-  padding: 20px;
-  width: 200px;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 5px;
+  color: #0000FF;
+  border: 2px solid #000000;
 }
 
-.button span {
-  cursor: pointer;
+
+#menu {
+  background-color: #FF4040;
+  border: 2px solid #000000;
+}
+
+#menu ul {
+  margin: 0px;
+}
+
+.item_menu {
   display: inline-block;
-  position: relative;
-  transition: 0.5s;
+  padding: 10px;
+
 }
 
-.button span:after {
-  content: '»';
+.item_menu a:link {
+  color: #000000;
+  text-decoration: none;
+}
+
+.item_menu a:visited {
+  color:#000000;
+  text-decoration: none;
+}
+
+.item_menu:hover {
+  background-color: #FFFAF0;
+}
+
+.item_menu:hover a{
+  color: #40E0D0;
+  text-decoration: none;
+}
+
+#C1 {
+  font-size: 14pt;
+  margin-left: center;
+  margin-right: center;
+  width: 100%;
+  margin-top: 0px;
+  margin-bottom: 50px;
+  background-color:#DA70D6;
+  border: 2px solid #000000;
+}
+#left {
+  font-size: 14pt;
+  margin-left: center;
+  margin-right: center;
+  width: 100%;
+  margin-top: 0px;
+  margin-bottom: 50px;
+  background-color:#DA70D6;
+  border: 2px solid #000000;
   position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
+  padding: 200px;
 }
-
-.button:hover span {
-  padding-right: 25px;
-}
-
-.button:hover span:after {
-  opacity: 1;
-  right: 0;
-}
-
-
-
-
-} /*
