--- a/style.css
+++ b/style.css
@@ -57,25 +57,9 @@
   border: 2px solid #000000;
 }
 
-esquerda {
-  padding: 20px;
-  width: 20%;
-  margin: 25px;
-  vertical-align: top;
+.table { border: 2px solid #000000;
+  background-color: #33CCFF;}
+.table:hover {
+  background-color: #66FFFF;
 }
-
-#esquerda ul li {
-  margin-top: 25px;
-}
-#left {
-  font-size: 14pt;
-  margin-left: center;
-  margin-right: center;
-  width: 100%;
-  margin-top: 0px;
-  margin-bottom: 50px;
-  background-color:#DA70D6;
-  border: 2px solid #000000;
-  position: absolute;
-  padding: 200px;
-}
+ }
