--- a/style.css
+++ b/style.css
@@ -97,3 +97,23 @@
   width: 50%;
   padding: 0px;
 }
+
+#biblioteca {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
+
+.Lbiblioteca {
+  display: inline-block;;
+  width: 150px;
+  border: 1px solid #bbbbcc;
+  background-color: #ddddee;
+  margin: 10px;
+  padding: 10px;
+}
+
+.Lbiblioteca img {
+  height: 200px;
+}
